--- a/src/page/home.css
+++ b/src/page/home.css
@@ -1,25 +1,25 @@
-/* 
 
+/* 
 .itemdiv {
     border: 2px solid blue;
-}
+} */
 
-.itemdiv2 {
+/* .itemdiv2 {
     border: 2px solid red;
-}
-
+} */
+/* 
 .card {
     border: 2px solid black;
-}
-
+} */
+/* 
 .cardimg {
     border: 2px solid red;
-}
-
+} */
+/* 
 .cardimg img {
     border: 2px solid red;
-}
-
+} */
+/* 
 .cardtxt {
     border: 2px solid red;
 } */
